# dns_switcher_project

./: .env.example  .flake8  .gitignore  LICENSE.txt  README.md  docker-compose.yaml  pyproject.toml
src/: config.py  crud.py  main.py  monitor.py  namespaces.py  utils.py
src/cloudflare/: crud.py  data.py  logger.py  monitor.py  namespaces.py
src/cloudflare/routes/: records.py  zones.py
src/cloudflare/utils/: common.py
src/routes/: records.py  zones.py
src/templates/: index.html
src/utils/: common.py
